src/styles.css
@import url('https://fonts.googleapis.com/css2?family=Jersey+10&display=swap');

@font-face {
    font-family: "A Goblin Appears";
    src: url("../src/fonts/AGoblinAppears-o2aV.ttf") format("truetype");
}

:root {
    --jersey10Font: 'Jersey 10', Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    --AGoblinAppearsFont: 'A Goblin Appears', monospace;
    --gridSize: 3rem;
    --padding: 20px;
    --border: 4px solid #000;
    --borderDisabled: 4px solid #888;
}

*,
*::before,
*::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    /* border: 1px solid red; */
}

body {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    align-items: center;
    font-size: 1rem;
    line-height: 1.5;
    min-height: 100vh;
    padding: var(--padding);
    background-color: hsl(215,90%,60%);
}

dialog {
    position: fixed;
    top: 50%;
    left: 50%;
    translate: -50% -50%;
    width: fit-content;
    padding: 1rem;
    background-color: hsl(56,100%,25%);
    border: var(--border);
}

dialog::backdrop {
  background: rgba(0, 0, 0, 0.4);
  backdrop-filter: blur(4px);
}

form {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

form input[type='text'] {
    padding: 1rem;
    border: var(--border);
    outline: none;
}

button {
    background-color: hsl(57,40%,70%);
    border: var(--border);
}

button:hover {
    background-color: hsl(57,40%,60%);
}

button:active {
    background-color: hsl(57,40%,50%);
    transform: scale(0.95);
}

button:disabled {
    background-color: hsl(57,40%,80%);
    border: var(--borderDisabled);
}

button:focus {
    border: 4px solid #000;
}

form > *,
.back-btn,
.single-player-btn,
.multi-player-btn,
#close-new-game-btn,
.restart-game-btn,
#restart-game-dialog,
#start-turn-dialog {
    font-family: var(--AGoblinAppearsFont);
    text-transform: uppercase;
}

.header-container {
    font-family: var(--jersey10Font);
    font-size: clamp(2rem, calc(2rem + 1vw), 4rem);
    color: hsl(25,100%,50%);
    word-break: break-all;
    text-align: center;
    line-height: 1;
}

.header-container > * {
    align-content: center;
    letter-spacing: .5rem;
    text-transform: uppercase;
    text-shadow:
        -.125rem -.125rem 0 #000,
         .125rem -.125rem 0 #000,
        -.125rem  .125rem 0 #000,
         .125rem  .125rem 0 #000;
}

#close-new-game-container {
    display: none;
    justify-content: end;
}

button {
    padding: 1rem;
    cursor: pointer;
}

.game-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 1rem;
    padding-bottom: 1rem;
}

#main-contents {
    display: flex;
    width: 100%;
    max-width: 2500px;
    justify-content: space-evenly;
    gap: 1rem;
}

#ship-dock-main-container {
    display: flex;
}

#ship-dock-container {
    align-self: center;
}

.outer-ship-container {
    display: flex;
    justify-content: end;
    padding: 1rem;
}

.inner-ship-container {
    display: grid;
    grid-auto-rows: minmax(var(--gridSize), 1fr);
    width: fit-content;
    pointer-events: all
}

.inner-ship-container > div {
    cursor: pointer;
}

.player-container {
    text-align: center;
}

.board-container {
    position: relative;
    width: fit-content;
}

.ship-board {
    position: absolute;
    inset: 0;
    pointer-events: none;
}

.player-board, 
.ship-board {
    display: grid;
    grid-template-columns: repeat(11, var(--gridSize));
    grid-auto-rows: var(--gridSize);
    user-select: none;
}

.player-board > div {
    text-align: center;
    align-content: center;
    border: 1px solid grey;
}

.board-square {
    border: 1px solid grey;
    background-color: blue;
}

.square-with-ship {
    background-color: darkgray;
}

.clickable-square {
    cursor: pointer;
}

.clickable-square:hover {
    background-color: green;
}

.board-hit {
    background-color: red;
}

.board-miss {
    background-color: lightyellow;
}

.board-sunk {
    background-color: darkblue;
}

.valid-placement {
    background-color: green;
}

.invalid-placement {
    background-color: red;
}

@media only screen and (min-width: 768px) {
    .header-container {
        font-size: clamp(4rem, calc(4rem + 1vw), 8rem);
    }

    .header-container > * {
        letter-spacing: .5rem;
        text-transform: uppercase;
        text-shadow:
            -.25rem -.25rem 0 #000,
            .25rem -.25rem 0 #000,
            -.25rem  .25rem 0 #000,
            .25rem  .25rem 0 #000;
    }
}

